fix content overflow

--- a/client/src/components/miscellaneous/profileInfo/profile.css
+++ b/client/src/components/miscellaneous/profileInfo/profile.css
@@ -1,24 +1,25 @@
 .userOrGroupInfo {
     height: 100%;
     background: #292929;
-}
+    overflow: auto;
 
-.userOrGroupInfo::-webkit-scrollbar {
-    width: 7px;
-    border-radius: 10px;
-}
+    &::-webkit-scrollbar {
+        width: 7px;
+        border-radius: 10px;
+    }
 
-.userOrGroupInfo::-webkit-scrollbar-thumb {
-    background-color: #888;
-    border-radius: 4px;
-}
+    &::-webkit-scrollbar-thumb {
+        background-color: #888;
+        border-radius: 4px;
+    }
 
-.userOrGroupInfo::-webkit-scrollbar-thumb:hover {
-    background-color: #555;
-}
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: #555;
+    }
 
-.userOrGroupInfo::-webkit-scrollbar-track {
-    background-color: transparent;
+    &::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
 }
 
 .infoTop {
@@ -27,16 +28,16 @@
     width: 100%;
     height: 7.5rem;
     align-items: center;
-}
 
-.infoTop > img {
-    margin: 0 2rem;
-}
+    > img {
+        margin: 0 2rem;
+    }
 
-.infoTop > span {
-    margin: 0 1rem;
-    font-size: 1.7rem;
-    color: #fff;
+    > span {
+        margin: 0 1rem;
+        font-size: 1.7rem;
+        color: #fff;
+    }
 }
 
 .editIcon {
@@ -55,7 +56,7 @@
     margin: 2rem auto;
 }
 
-.infoProfilePic>img {
+.infoProfilePic > img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -69,7 +70,7 @@
     padding: 2rem;
 }
 
-.profileDetails > span{
+.profileDetails > span {
     font-size: 1.8rem;
     color: #fff;
 }
@@ -86,7 +87,7 @@
         font-size: 1.5rem;
     }
 
-    .profileDetails > span{
+    .profileDetails > span {
         font-size: 1.5rem;
     }
 }
@@ -95,12 +96,12 @@
     .userOrGroupInfo::-webkit-scrollbar {
         width: 4px;
     }
-    
+
     .editIcon {
         width: 26px;
         height: 26px;
     }
-    
+
     .infoProfilePic {
         width: 18rem;
         height: 18rem;
